--- a/Ex2-assignment-level-2/index.html
+++ b/Ex2-assignment-level-2/index.html
@@ -43,8 +43,8 @@
         <h1>Why we are doing AltCampus?</h1>
         <p>AltCampus is an alternative to college that you wish existed. Currently, we are offering an in-house, 6-month long program to train people in quality software development, where they don't have to pay anything until they get hired.</p>
         <p>We live in the world of digital skills. These skills are always evolving and so is their demand. Students/Professional who are not responsive to the changes in the industry demands, in terms of skills, will have a hard time surviving, well at least flourishing.</p>
-        <a href="#"><button>Read More</button></a>
-        <!-- <a class="read-more" href="#">Read More</a> -->
+        <a class="read-more" href="#">Read More</a>
+      
     </article>
    </main>
 
