--- a/Ex2-assignment-level-3/index.html
+++ b/Ex2-assignment-level-3/index.html
@@ -35,7 +35,7 @@
 
                     <section class="col-1-2">
                         <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam numquam velit minus nisi explicabo corrupti accusantium temporibus est odit debitis, architecto.</p>
-                        <button class="btn hero-btn"><a href="#">Get statrted</a></button>
+                        <a class="btn hero-btn" href="#">Get statrted</a>
                     </section>
                 </div>                
             </section>
@@ -47,7 +47,7 @@
                     <section class="col-1-2 break">
                         <h2 class="heading">Explicabo corrupti accusantium</h2>
                         <p class="text section-para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam numquam velit minus nisi explicabo corrupti accusantium temporibus est odit debitis, architecto, magnam fugiat magni cum? Odit temporibus rem dolore nisi.</p>
-                        <button class="btn section-btn"><a href="#">Learn More</a></button>
+                        <a class="btn section-btn" href="#">Learn More</a>
                     </section>
 
                     <section class="col-1-2">
@@ -70,7 +70,7 @@
                         <div class="sub-article">
                             <h3 class="heading">Ipsum dolor sit amet consectetur adipisicing elit</h3>
                             <p class="article-para">Perspiciatis recusandae cupiditate soluta harum cumque quis voluptates voluptatibus iusto. Molestias, cupiditate! Deserunt laboriosam.</p>
-                            <button class="btn section-btn"><a href="#">details</a></button>
+                            <a class="btn section-btn" href="#">details</a>
                         </div>
                     </div>
 
@@ -79,7 +79,7 @@
                         <div class="sub-article">
                             <h3 class="heading">Ipsum dolor sit amet consectetur adipisicing elit</h3>
                             <p class="article-para">Perspiciatis recusandae cupiditate soluta harum cumque quis voluptates voluptatibus iusto. Molestias, cupiditate! Deserunt laboriosam.</p>
-                            <button class="btn section-btn"><a href="#">details</a></button>
+                            <a class="btn section-btn" href="#">details</a>
                         </div>
                     </div>
 
@@ -88,12 +88,12 @@
                         <div class="sub-article">
                             <h3 class="heading">Ipsum dolor sit amet consectetur adipisicing elit</h3>
                             <p class="article-para">Perspiciatis recusandae cupiditate soluta harum cumque quis voluptates voluptatibus iusto. Molestias, cupiditate! Deserunt laboriosam.</p>
-                            <button class="btn section-btn"><a href="#">details</a></button>
+                            <a class="btn section-btn" href="#">details</a>
                         </div>
                     </div>
 
                     <div class="article-btn">
-                        <button class="btn section-btn center-btn"><a href="#">Ipsum magna tempus</a></button>
+                        <a class="btn section-btn center-btn" href="#">Ipsum magna tempus</a>
                     </div>
                     
                 </div>
@@ -113,7 +113,7 @@
                             
                         </form>
 
-                        <button class="btn section-btn"><a href="#">Send message</a></button>
+                        <a class="btn section-btn" href="#">Send message</a>
                     </section>
 
                     <section class="col-1-2">
